prevent scrollbar jump when showing dialogs
and scrollbar is always displayed by OS

--- a/apps/docs/pages/globals.css
+++ b/apps/docs/pages/globals.css
@@ -3,6 +3,10 @@ html {
   font-feature-settings: "cv02", "cv03", "cv04";
 }
 
+body {
+  width: auto;
+}
+
 code,
 kbd,
 samp,
